--- a/examples/sass/base.scss
+++ b/examples/sass/base.scss
@@ -1,7 +1,7 @@
 @import "compass",
         "variables",
         "sheetify",
-        "layout/grid";
+        "layout/layout";
 
 body {
     background:$white;
